[package]
name = "solana-offchain-message"
description = "Solana offchain message signing"
documentation = "https://docs.rs/solana-offchain-message"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
dev-context-only-utils = ["verify"]
verify = ["solana-signature/verify"]
default = ["verify"]

[dependencies]
num_enum = { workspace = true }
solana-hash = "2.3.0"
solana-packet = "2.2.1"
solana-pubkey = "2.4.0"
solana-sanitize = "2.2.1"
solana-sha256-hasher = { version = "2.3.0", features = ["sha2"] }
solana-signature = { version = "2.3.0", features = ["verify"] }
solana-signer = "2.2.1"

[dev-dependencies]
solana-keypair = "2.2.3"
solana-offchain-message = { path = ".", features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
