[package]
name = "solana-offchain-message"
description = "Solana offchain message signing"
documentation = "https://docs.rs/solana-offchain-message"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
dev-context-only-utils = []
verify = []

[dependencies]
# Allows use in agave CLI until agave supports 3.0.0 across the board
num_enum = { workspace = true }
solana-hash = "2.2.1"
solana-packet = "2.2.1"
solana-pubkey = "2.2.1"
solana-sanitize = "2.2.1"
solana-serialize-utils = { version = "3.0.0", path = "../serialize-utils" }
solana-sha256-hasher = { version = "2.2.1", features = ["sha2"] }
solana-signature = { version = "2.2.1", features = ["verify"] }
solana-signer = "2.2.1"

[dev-dependencies]
solana-keypair = "2.2.1"
solana-offchain-message = { path = ".", features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
